# brightness-tray

./: .eslintrc.cjs  .prettierrc  Cargo.toml  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: App.tsx  MonitorList.tsx  Panel.tsx  devtools.js  lib.rs  main.js  main.ts  main.tsx  monitor.ts  polyfill.d.ts  polyfill.js  polyfill.ts  settings.js  settings.ts  style.css  style.global.sass  style.module.sass  style.ts  util.d.ts  util.js  vite-env.d.ts  vue-shim.d.ts  watchers.d.ts  watchers.js  watchers.ts  wm.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/monitor/: Cargo.toml
src-tauri/monitor/src/: lib.rs
src-tauri/monitor/wide/: Cargo.toml
src-tauri/monitor/wide/src/: lib.rs
src-tauri/src/: colors.rs  main.rs  monitors.rs  process.rs  tray.rs  util.rs  wm.rs
src/components/: BrightnessPanel.vue  ColorProvider.vue  FeatureSlider.vue  MonitorItem.vue  MonitorList.vue  Panel.vue
