[package]
name = "brightness-tray"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
monitor = { path = "monitor" }
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5", features = [] }
uuid = { version = "1.6", features = ["v4"] }
windows-version = "0.1"
raw-window-handle = "0.5"

[dependencies.windows]
version = "0.52"
features = [
    "UI_ViewManagement",
    "Win32_Foundation",
    "Win32_Graphics_Dwm",
    "Win32_UI_Controls",
    "Win32_UI_WindowsAndMessaging",
]

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
