[package]
name = "monitor"
version = "0.1.0"
edition = "2021"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Devices_Display",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_Security",
    "Win32_System_Com",
    "Win32_System_IO",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_System_Wmi",
]

[dependencies.once_cell]
version = "1.18"

[dependencies.wide]
path = "wide"

[[bin]]
name = "list-monitors"
path = "src/bin/list_monitors.rs"

[[bin]]
name = "monitor-config"
path = "src/bin/monitor_config.rs"
